src/objects/MF_Account__c.object
<CustomObject>
    <fields>
        <fullName>Acccount_Type_Multiplier__c</fullName>
        <formula>IF(OR(CONTAINS(Account_Type__r.Name, &quot;ASSET&quot;) ,CONTAINS(Account_Type__r.Name, &quot;EXPENSE&quot;)),1,-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acccount Type Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Type</description>
        <inlineHelpText>Account Type</inlineHelpText>
        <label>Account Type</label>
        <referenceTo>MF_Account_Type__c</referenceTo>
        <relationshipLabel>MF Account</relationshipLabel>
        <relationshipName>MF_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>This stores balance calculated from all the transactions made on account.</description>
        <label>Transaction Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <referenceTo>Office_Name__c</referenceTo>
        <relationshipLabel>MF Accounts</relationshipLabel>
        <relationshipName>MF_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Category_1__c</fullName>
        <label>Category 1</label>
        <picklist>
            <picklistValues>
                <fullName>Treasury and Operations with Banks and Other Financial Institutions FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations with Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Earnings</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_2__c</fullName>
        <label>Category 2</label>
        <picklist>
            <picklistValues>
                <fullName>Accrual Payable Interests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accrual Receivable Interests</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assets in The Union Credit Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Borrowings Overnight and Term Treasury</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash and Equivalent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash held in Banks and Other Financial Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cash in Vaults</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equipment Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Equity Investments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Loans to Banks and Other Financial Institutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Borrowings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Assets &amp; Depreciation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gross Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal Reserves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mortgage Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Net ProfitLoss of Period +- From January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Network Resources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Performing Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Performing Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Long Term Liabilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Reserves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Securities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others Assets Stock,…</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Overdraft &amp; Treasury Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paid up Capital</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payable Accounts and other short term liabilities</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Category_3__c</fullName>
        <label>Category 3</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Description</description>
        <inlineHelpText>Description</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FY_Closing_Balance__c</fullName>
        <label>FY Closing Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Year</label>
        <referenceTo>Fiscal_Year__c</referenceTo>
        <relationshipLabel>MF Accounts</relationshipLabel>
        <relationshipName>MF_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Master__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Master</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JV_Allowed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JV Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Long_Description__c</fullName>
        <label>Long Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opening_Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>opening balance (starting balance at time of GO LIVE ) for MF Account.</description>
        <label>Opening Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Account</description>
        <inlineHelpText>Parent Account</inlineHelpText>
        <label>Parent Account</label>
        <referenceTo>MF_Account__c</referenceTo>
        <relationshipLabel>MF Account</relationshipLabel>
        <relationshipName>MF_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Close</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Name &amp;  &quot; &quot; &amp; Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Balance__c</fullName>
        <description>This is formula field which shows total balance in account by adding opening balance &amp; transactions balance.</description>
        <formula>Opening_Balance__c  +  Balance__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isLeaf__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Leaf</label>
        <type>Checkbox</type>
    </fields>
    <label>MF Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Branch__c</columns>
        <columns>Parent_Account__c</columns>
        <columns>Is_Master__c</columns>
        <columns>Fiscal_Year__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Account Number</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>nf_01IE00000000DPFMA2_00NE0000000HelFMAS</fullName>
        <active>true</active>
        <errorMessage>GL is neither of type ASSET nor a master account.</errorMessage>
        <field>Office_Name__c.Cash_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>10000 - ASSETS</value>
        </filterItems>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Office_Cash Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DPFMA2_00NE0000000Hs1pMAC</fullName>
        <active>true</active>
        <errorMessage>Please select a Master GL.</errorMessage>
        <field>Office_Name__c.Check_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Branch_Check Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DPFMA2_00NE0000000s8BXMAY</fullName>
        <active>true</active>
        <errorMessage>Please select a master GL.</errorMessage>
        <field>Office_Name__c.Bank_Account_Checks__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Branch_Bank Account (Checks)</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DPFMA2_00NE0000000s8BvMAI</fullName>
        <active>true</active>
        <errorMessage>Please select a master GL.</errorMessage>
        <field>Office_Name__c.Inward_Check_Clearance_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Branch_Inward Check Clearance Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DPFMA2_00NE0000000s8C0MAI</fullName>
        <active>true</active>
        <errorMessage>Please select a master GL.</errorMessage>
        <field>Office_Name__c.Outward_Check_Clearance_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Branch_Outward Check Clearance Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000Ds7MAE_00NE0000000HsEZMA0</fullName>
        <active>true</active>
        <errorMessage>GL is either not an Income or a master account.</errorMessage>
        <field>Fee__c.Income_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>30000 - INCOME</value>
        </filterItems>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Fee_Income Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000Ds7MAE_00NE0000000IMD0MAO</fullName>
        <active>true</active>
        <errorMessage>Please select a master GL.</errorMessage>
        <field>Fee__c.Suspended_Fee_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Fee_Suspended Fee Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DtKMAU_00NE0000000HtqpMAC</fullName>
        <active>true</active>
        <field>Loan_Product__c.Product_Interest_Income_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>30000 - INCOME</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Loan Product_Product Interest Income Acc</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DtKMAU_00NE0000000HtrSMAS</fullName>
        <active>true</active>
        <field>Loan_Product__c.Product_Loan_Loss_Provision_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>40000 - EXPENDITURE</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Loan Product_Product Loan Loss Provision</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DtKMAU_00NE0000000IECcMAO</fullName>
        <active>true</active>
        <field>Loan_Product__c.Product_Loan_Loss_Reserve_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>20000 - LIABILITIES</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Loan Product_Product Loan Loss Reserve A</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DtKMAU_00NE0000000IMCvMAO</fullName>
        <active>true</active>
        <field>Loan_Product__c.Product_Int_On_Overdue_Income_Acc__c</field>
        <filterItems>
            <field>MF_Account__c.Account_Type__r.Name</field>
            <operation>equals</operation>
            <value>30000 - INCOME</value>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Loan Product_Product Int On Overdue Inco</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DtbMAE_00NE0000000GGTSMA4</fullName>
        <active>true</active>
        <errorMessage>GL doesn&apos;t match filtering criteria.</errorMessage>
        <field>Transaction_Entry__c.MF_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>MF_Account__c.Branch__r.Name</field>
            <operation>equals</operation>
            <valueField>$User.Current_Branch__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Transaction Entry_MF Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DteMAE_00NE0000000IMANMA4</fullName>
        <active>true</active>
        <errorMessage>Please select a Master GL.</errorMessage>
        <field>Savings_Product__c.Interest_Payable_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Savings Product_Interest Payable Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DteMAE_00NE0000000IMBZMA4</fullName>
        <active>true</active>
        <errorMessage>Please select a Master GL.</errorMessage>
        <field>Savings_Product__c.Savings_Product_Control_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Savings Product_Savings Product Control</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DteMAE_00NE0000000IMBsMAO</fullName>
        <active>true</active>
        <errorMessage>Please select a Master GL.</errorMessage>
        <field>Savings_Product__c.Interest_Expense_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Savings Product_Interest Expense Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000DteMAE_00NE0000000IMC2MAO</fullName>
        <active>true</active>
        <errorMessage>Please select a Master GL.</errorMessage>
        <field>Savings_Product__c.Accrued_Interest_Payable_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Savings Product_Accrued Interest Payable</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000XFkMAM_00NE0000000HtWWMA0</fullName>
        <active>true</active>
        <errorMessage>Please select a master GL.</errorMessage>
        <field>Accounting_Rule_Line__c.Credit_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Accounting Rule Line_Credit Account</name>
    </namedFilters>
    <namedFilters>
        <fullName>nf_01IE00000000XFkMAM_00NE0000000HtY2MAK</fullName>
        <active>true</active>
        <errorMessage>Please select a master GL.</errorMessage>
        <field>Accounting_Rule_Line__c.Debit_Account__c</field>
        <filterItems>
            <field>MF_Account__c.Is_Master__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
        <name>Accounting Rule Line_Debit Account</name>
    </namedFilters>
    <pluralLabel>MF Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Check_Unique_Account</fullName>
        <active>false</active>
        <errorConditionFormula>IF((Name = VLOOKUP( $ObjectType.MF_Account__c.Fields.Name , $ObjectType.MF_Account__c.Fields.Name , Name ) 
&amp;&amp; 
Branch__c  =  VLOOKUP($ObjectType.MF_Account__c.Fields.Branch__c ,  $ObjectType.MF_Account__c.Fields.Name,Branch__c )
&amp;&amp;
 Fiscal_Year__c  =  VLOOKUP( $ObjectType.MF_Account__c.Fields.Fiscal_Year__c , $ObjectType.MF_Account__c.Fields.Name,  Fiscal_Year__c ) 
),TRUE,FALSE)</errorConditionFormula>
        <errorMessage>Account Number already exists.</errorMessage>
    </validationRules>
</CustomObject>